--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -3,3 +3,6 @@ $header-background: #6dc0d5;
 $header-title-color: #fff;
 $header-user-color: #000;
 $header-signout-background: #dff1f6;
+$navigation-background: #eff8fb;
+$navigation-number-background: #6dc0d5;
+$navigation-number-background-hover: #61b4c9;
